--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
