--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,10 +17,15 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
+    env:
+      ## Environment variable
+      NEXT_MEETUP_API_KEY: "VPYSIEKBBAJJK45JKPWW"    
+
     strategy:
       matrix:
         node-version: [14.x, 16.x]
+
+
         
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,7 +35,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn 
-    - run: yarn run build --if-present
+    - run: yarn run build
     # - run: yarn test
 
 
