--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "date-fns": "^2.28.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
