--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-google-calendar-api": "^2.1.0",
     "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
