--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "gapi-script": "^1.2.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-google-calendar-api": "^2.1.0",
     "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
