--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "gapi-script": "^1.2.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hot-toast": "^2.3.0"
+    "react-hot-toast": "^2.3.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
