--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,10 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
   "extends": ["next/core-web-vitals", "eslint:recommended"],
   "rules": {
     "@next/next/no-img-element": 0
