--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts", "pages/**/*", "src/**/*", "styles/**/*", "__test__/**/*"
+    // "next-env.d.ts", "**/*.ts", "**/*.tsx"
+  ],
+  "exclude": ["node_modules", "coverage"]
 }
