--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.6.4"
   }
 }
