--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "classnames": "^2.3.2",
     "date-fns": "^2.28.0",
     "gapi-script": "^1.2.0",
     "next": "12.1.6",
