--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hot-toast": "^2.3.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-social-icons": "^5.14.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.17.1",
