--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
+    "@react-oauth/google": "^0.2.8",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
