--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,14 @@
 version: '3.3'
 services:
   app:
+    image: 'events-app-img'
     build: .
-    container_name: 'planner_app_c'
+    container_name: 'events_app_c'
     ports:
       - '3000:3000'
     volumes:
       - .:/app
-      - .:/planer_app
+      - .:/events_app
       - ./node_modules
     stdin_open: true
     tty: true  
