--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.28.0",
-    "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hot-toast": "^2.3.0",
+    "react-hook-form": "^7.38.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.2",
     "react-social-icons": "^5.14.0"
   },
@@ -39,7 +40,6 @@
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "jest": "^29.0.2",
-    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
