--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "12.2.3",
+    "next-auth": "^4.16.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.2",
@@ -38,7 +39,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.3",
     "jest": "^29.0.2",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
