--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.2",
     "react-social-icons": "^5.14.0"
   },
