--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
-    "@react-oauth/google": "^0.2.8",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
@@ -42,10 +41,12 @@
     "eslint": "8.15.0",
     "eslint-config-next": "12.2.3",
     "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
     "tailwindcss-textshadow": "^2.1.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.6.4"
   }
 }
