--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
     "date-fns": "^2.28.0",
+    "firebase": "^9.14.0",
     "jwt-decode": "^3.1.2",
     "next": "12.2.3",
     "next-auth": "^4.16.4",
