feat: ads updates

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ GITHUB_SECRET=
 
 NEXT_PORT=5000
 NEXTAUTH_SECRET=
+
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_MESSAGE_ID=
+NEXT_PUBLIC_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_APP_ID=
