github actions env vars

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ## Environment variable
-      NEXT_MEETUP_API_KEY: "VPYSIEKBBAJJK45JKPWW"    
+      # NEXT_MEETUP_API_KEY: "VPYSIEKBBAJJK45JKPWW"    
+      NEXT_PUBLIC_FIREBASE_API_KEY: process.env.NEXT_PUBLIC_FIREBASE_API_KEY
+      NEXT_PUBLIC_FIREBASE_MESSAGE_ID: process.env.NEXT_PUBLIC_FIREBASE_MESSAGE_ID
+      NEXT_PUBLIC_STORAGE_BUCKET: process.env.NEXT_PUBLIC_STORAGE_BUCKET
+      NEXT_PUBLIC_FIREBASE_APP_ID: process.env.NEXT_PUBLIC_FIREBASE_APP_ID
+
 
     strategy:
       matrix:
