--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookies-next": "^2.1.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.14.0",
+    "gapi-script": "^1.2.0",
     "jwt-decode": "^3.1.2",
     "next": "12.2.3",
     "next-auth": "^4.16.4",
